Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>
-</title>
+<title>Dopetastic</title>
 </head>
-<body>
 
+<body>
+Content of my webpage
 </body>
 
 </html>
