--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+<head>
+<title>Dopetastic</title>
+</head>
+
+<body>
+Content of my webpage
+</body>
+
+</html>
